[gd_scene load_steps=10 format=3 uid="uid://m3m6uwcx1u2r"]

[ext_resource type="Script" uid="uid://7lgnuookik7v" path="res://scenes/world/next_mission.gd" id="1_lj8pd"]
[ext_resource type="Texture2D" uid="uid://dgdy74kru1nbp" path="res://assets/UI/ui_backgroung-03.png" id="2_24pnh"]
[ext_resource type="Shader" uid="uid://ctqstpseybqpn" path="res://scenes/world/glitch.gdshader" id="2_bnq1j"]
[ext_resource type="Texture2D" uid="uid://dxnbe56ev3oxc" path="res://assets/UI/ui_backgroung-04.png" id="3_6h1bm"]
[ext_resource type="Texture2D" uid="uid://dd4cr0e8ggjer" path="res://assets/UI/JSON.png" id="3_k4vbs"]
[ext_resource type="Texture2D" uid="uid://c2xvwo53wg1c8" path="res://assets/UI/UI_button.png" id="6_6h1bm"]
[ext_resource type="Texture2D" uid="uid://bclpnp34cg8or" path="res://assets/UI/UI_button_pressed.png" id="7_u6wly"]
[ext_resource type="Texture2D" uid="uid://bj0rkbde0r2d1" path="res://assets/UI/text.png" id="8_u6wly"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bnq1j"]
shader = ExtResource("2_bnq1j")
shader_parameter/shake_power = 0.03
shader_parameter/shake_rate = 0.2
shader_parameter/shake_speed = 5.0
shader_parameter/shake_block_size = 30.5
shader_parameter/shake_color_rate = 0.016

[node name="NextMission" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lj8pd")

[node name="HBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -205.0
offset_top = -85.0
offset_right = 205.0
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="CenterContainer2" type="CenterContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="CenterContainer3" type="CenterContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="UiBackgroung-03" type="Sprite2D" parent="HBoxContainer/CenterContainer"]
position = Vector2(224, 200.5)
texture = ExtResource("2_24pnh")

[node name="UiBackgroung-04" type="Sprite2D" parent="HBoxContainer/CenterContainer"]
position = Vector2(300, 208.5)
texture = ExtResource("3_6h1bm")

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_bnq1j")
custom_minimum_size = Vector2(200, 258.82)
layout_mode = 2
anchor_top = 0.624
anchor_right = 0.337
anchor_bottom = 0.983
offset_left = 217.0
offset_top = -12.28
offset_right = -14.36
offset_bottom = -11.94
texture = ExtResource("3_k4vbs")
expand_mode = 1
stretch_mode = 5

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 958.0
offset_top = 616.0
offset_right = -277.0
offset_bottom = -73.0
grow_horizontal = 2
grow_vertical = 2
text = "Next"
flat = true

[node name="TextureButton" type="TextureButton" parent="Button"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
offset_left = -19.0
offset_top = -6.0
offset_right = 71.0
offset_bottom = 44.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("6_6h1bm")
texture_hover = ExtResource("7_u6wly")
ignore_texture_size = true

[node name="Text" type="Sprite2D" parent="."]
position = Vector2(731, 583)
texture = ExtResource("8_u6wly")

[node name="missionTarget" type="Label" parent="."]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 726.0
offset_top = 550.0
offset_right = -553.0
offset_bottom = -135.0
theme_override_font_sizes/font_size = 25
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Button/TextureButton" to="." method="_on_texture_button_pressed"]
